Updated package.json to include parse and value modules and added test modules as well

--- a/style.css
+++ b/style.css
@@ -2,16 +2,12 @@ html {
   font-size: 100%; 
 }
 
-html {
-  font-size: 100%; 
-}
-
 body {
   font-size: 12px;
 }
 
 p {
-  font-size: 12em;
+  font-size: 12px;
 }
 
 h1 {
